# MATH39032

./: CMakeLists.txt  source.sh
notebooks/: Linear Regression.ipynb  Untitled.ipynb  setup.py  test.ipynb  test2.ipynb
notebooks/.ipynb_checkpoints/: Competition Test Notebook-checkpoint.ipynb  Linear Regression-checkpoint.ipynb  Real Data Strategies-checkpoint.ipynb  Simulating Strategies-checkpoint.ipynb  Untitled-checkpoint.ipynb  test-checkpoint.ipynb  test2-checkpoint.ipynb
notebooks/MathFinanceWorkshop/: MFW_Simulation.py
